--- a/.github/workflows/integration-environment-build-and-push.yaml
+++ b/.github/workflows/integration-environment-build-and-push.yaml
@@ -34,6 +34,10 @@ jobs:
         id: create_artifact_dir_base
         run: mkdir -p ${{ runner.temp }}/artifacts
 
+      - name: Setup Docker Buildx
+        id: setup_buildx_base
+        uses: docker/setup-buildx-action@v3
+
       - name: Build Image
         id: build
         uses: docker/build-push-action@v6
@@ -80,6 +84,10 @@ jobs:
       - name: Create Artifact Directory
         id: create_artifact_dir_integration
         run: mkdir -p ${{ runner.temp }}/artifacts
+
+      - name: Setup Docker Buildx
+        id: setup_buildx_integration
+        uses: docker/setup-buildx-action@v3
 
       - name: Build Image
         id: build
