ci(workflow): disable pull for local image in workflow for integration environment

--- a/.github/workflows/integration-environment-build-and-push.yaml
+++ b/.github/workflows/integration-environment-build-and-push.yaml
@@ -107,6 +107,7 @@ jobs:
         id: build
         uses: docker/build-push-action@v6
         with:
+          pull: false
           push: false
           context: ./.envcontainer
           file: ./.envcontainer/App.Dockerfile
