ci(workflow): add platform for local image in workflow for integration environment

--- a/.github/workflows/integration-environment-build-and-push.yaml
+++ b/.github/workflows/integration-environment-build-and-push.yaml
@@ -111,6 +111,7 @@ jobs:
           push: false
           context: ./.envcontainer
           file: ./.envcontainer/App.Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           tags: ${{ vars.REPOSITORY }}/${{ vars.IMAGE }}:integration-latest
           build-args: |
             BASE_REPOSITORY=${{ vars.REPOSITORY }}
