--- a/.github/workflows/integration-environment-build-and-push.yaml
+++ b/.github/workflows/integration-environment-build-and-push.yaml
@@ -30,6 +30,10 @@ jobs:
         id: checkout
         uses: actions/checkout@v4
 
+      - name: Create Artifact Directory
+        id: create_artifact_dir
+        run: mkdir -p ${{ runner.temp }}/artifacts
+
       - name: Setup Docker Buildx
         id: setup_buildx
         uses: docker/setup-buildx-action@v3
@@ -56,7 +60,13 @@ jobs:
             BASE_IMAGE=${{ vars.BASE_IMAGE }}
             BASE_ENVIRONMENT=${{ vars.BASE_ENVIRONMENT }}
             DENO_VERSION=${{ vars.DENO_VERSION }}
-          cache-to: type=gha,mode=max
+          outputs: type=docker,dest=${{ runner.temp }}/artifacts/base-environment.tar
+
+      - name: Upload Image as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: base-environment
+          path: ${{ runner.temp }}/artifacts/base-environment.tar
 
   build:
     name: Build Integration Environment
@@ -69,9 +79,24 @@ jobs:
         id: checkout
         uses: actions/checkout@v4
 
+      - name: Download Image as Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: base-environment
+          path: ${{ runner.temp }}/artifacts
+
       - name: Setup Docker Buildx
         id: setup_buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Load Image from Artifact
+        run: |
+          docker load --input ${{ runner.temp }}/artifacts/base-environment.tar
+          docker image ls -a
+
+      - name: Create Artifact Directory
+        id: create_artifact_dir
+        run: mkdir -p ${{ runner.temp }}/artifacts
 
       - name: Debug Build Arguments
         run: |
@@ -92,8 +117,7 @@ jobs:
             BASE_IMAGE=${{ vars.IMAGE }}
             BASE_ENVIRONMENT=base
             BASE_RELEASE=latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          outputs: type=docker,dest=${{ runner.temp }}/artifacts/integration-environment.tar
 
       - name: Upload Image as Artifact
         uses: actions/upload-artifact@v4
