--- a/.github/workflows/integration-environment-build-and-push.yaml
+++ b/.github/workflows/integration-environment-build-and-push.yaml
@@ -20,8 +20,8 @@ on:
       - main
 
 jobs:
-  build_base:
-    name: Build Base Environment
+  build:
+    name: Build Base and Integration Environment
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -29,10 +29,6 @@ jobs:
       - name: Checkout Repository
         id: checkout
         uses: actions/checkout@v4
-
-      - name: Create Artifact Directory
-        id: create_artifact_dir
-        run: mkdir -p ${{ runner.temp }}/artifacts
 
       - name: Setup Docker Buildx
         id: setup_buildx
@@ -47,8 +43,8 @@ jobs:
           echo "REPOSITORY        = ${{ vars.REPOSITORY }}"
           echo "IMAGE             = ${{ vars.IMAGE }}"
 
-      - name: Build Image
-        id: build
+      - name: Build Base Image
+        id: build_base
         uses: docker/build-push-action@v6
         with:
           push: false
@@ -60,56 +56,11 @@ jobs:
             BASE_IMAGE=${{ vars.BASE_IMAGE }}
             BASE_ENVIRONMENT=${{ vars.BASE_ENVIRONMENT }}
             DENO_VERSION=${{ vars.DENO_VERSION }}
-          outputs: type=docker,dest=${{ runner.temp }}/artifacts/base-environment.tar
+          load: true
+          cache-to: type=gha,mode=max
 
-      - name: Upload Image as Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: base-environment
-          path: ${{ runner.temp }}/artifacts/base-environment.tar
-
-  build:
-    name: Build Integration Environment
-    runs-on: ubuntu-latest
-    needs: build_base
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout Repository
-        id: checkout
-        uses: actions/checkout@v4
-
-      - name: Download Image as Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: base-environment
-          path: ${{ runner.temp }}/artifacts
-
-      - name: Setup Docker Buildx
-        id: setup_buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Load Image from Artifact
-        run: |
-          docker load --input ${{ runner.temp }}/artifacts/base-environment.tar
-          docker image ls -a
-
-      - name: Re-Tag Image from Artifact
-        run: |
-          docker tag ${{ vars.REPOSITORY }}/${{ vars.IMAGE }}:base-latest ${{ vars.REPOSITORY }}/${{ vars.IMAGE }}:base-latest
-          docker image ls -a
-
-      - name: Create Artifact Directory
-        id: create_artifact_dir
-        run: mkdir -p ${{ runner.temp }}/artifacts
-
-      - name: Debug Build Arguments
-        run: |
-          echo "REPOSITORY        = docker.io/${{ vars.REPOSITORY }}"
-          echo "IMAGE             = ${{ vars.IMAGE }}"
-
-      - name: Build Image
-        id: build
+      - name: Build Environment Image
+        id: build_environment
         uses: docker/build-push-action@v6
         with:
           pull: false
@@ -122,9 +73,9 @@ jobs:
             BASE_IMAGE=${{ vars.IMAGE }}
             BASE_ENVIRONMENT=base
             BASE_RELEASE=latest
-          outputs: type=docker,dest=${{ runner.temp }}/artifacts/integration-environment.tar
-          cache-from: |
-            type=local,src=${{ runner.temp }}/artifacts
+          load: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Upload Image as Artifact
         uses: actions/upload-artifact@v4
