ci(workflow): remove docker.io/ registry for base image in workflow for integration environment

--- a/.github/workflows/integration-environment-build-and-push.yaml
+++ b/.github/workflows/integration-environment-build-and-push.yaml
@@ -69,7 +69,7 @@ jobs:
           file: ./.envcontainer/App.Dockerfile
           tags: ${{ vars.REPOSITORY }}/${{ vars.IMAGE }}:integration-latest
           build-args: |
-            BASE_REPOSITORY=docker.io/${{ vars.REPOSITORY }}
+            BASE_REPOSITORY=${{ vars.REPOSITORY }}
             BASE_IMAGE=${{ vars.IMAGE }}
             BASE_ENVIRONMENT=base
             BASE_RELEASE=latest
